--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,15 @@
+* {
+  font-family: Verdana;
+}
+
 h1 {
   font-weight: normal;
-  color: blue;
+  color: white;
+  font-size: 50px;
+  text-align: center;
+}
+
+.download_link {
+  color: aquamarine;
+  font-size: 16px;
 }
