--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,7 @@
 * {
   font-family: Verdana;
+  text-align: center;
+  background-color: black;
 }
 
 h1 {
@@ -9,7 +11,22 @@ h1 {
   text-align: center;
 }
 
+h2 {
+  font-size: 42px;
+  font-weight: 300;
+  color: white;
+}
+
+p {
+  font-size: 21px;
+  color: grey;
+}
+
 .download_link {
   color: aquamarine;
   font-size: 16px;
+}
+
+#copyright {
+  text-align: right;
 }
